# VideoPlayer

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/tlinux/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFMpegVideoDecoder.cpp  FFMpegVideoDecoder.h  demuxing_decoding.cpp  demuxing_decoding.h  native-lib.cpp
app/src/main/cpp/common/: FFMPeg.h  MovieFrame.cpp  MovieFrame.h
app/src/main/cpp/common/opengles/core/: EGLCore.cpp  EGLCore.h  EglShareContext.cpp  EglShareContext.h
app/src/main/cpp/common/opengles/media/: VideoFrame.cpp  VideoFrame.h
app/src/main/cpp/common/opengles/teture/: TextureFrame.cpp  TextureFrame.h  YUVTextureFrame.cpp  YUVTextureFrame.h
app/src/main/cpp/common/opengles/texure_uploader/: TextureFrameUploader.cpp  TextureFrameUploader.h  YUVTextureFrameUploader.cpp  YUVTextureFrameUploader.h
app/src/main/cpp/include/libavformat/: avformat.h  avio.h
app/src/main/cpp/include/libavutil/: avstring.h  bprint.h
app/src/main/cpp/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/src/main/java/com/example/tlinux/myapplication/: GLProgram.java  MainActivity.java  VideoRenderer.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/tlinux/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
